--- a/workers/polar-checkout-worker/wrangler.toml
+++ b/workers/polar-checkout-worker/wrangler.toml
@@ -4,12 +4,12 @@ compatibility_date = "2026-02-15"
 workers_dev = true
 
 [vars]
-POLAR_MODE = "sandbox"
-DEFAULT_PRODUCT_ID = "45ee4c82-2396-44bd-8249-a577755cbf9e"
+POLAR_MODE = "production"
+DEFAULT_PRODUCT_ID = "09ed8b9c-c328-4962-a12f-69923155d3c6"
 ALLOWED_ORIGINS = "https://ninanoo.com,https://www.ninanoo.com,http://localhost:8000,http://127.0.0.1:8000,http://localhost:3000,http://127.0.0.1:3000"
 ALLOWED_HOSTS = "api.ninanoo.com,localhost,127.0.0.1"
 AUTO_REFUND_ENABLED = "true"
-AUTO_REFUND_PRODUCT_IDS = "45ee4c82-2396-44bd-8249-a577755cbf9e"
+AUTO_REFUND_PRODUCT_IDS = "09ed8b9c-c328-4962-a12f-69923155d3c6"
 AUTO_REFUND_EMAIL_DOMAIN_DENYLIST = ""
 REPORT_EMAIL_FROM = "Ninanoo Report <no-reply@ninanoo.com>"
 REPORT_EMAIL_REPLY_TO = ""
